--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-567-nomad-force
         </h1>
 
         <p class="text-secondary-white-color" data-aos="fade-up" data-aos-delay="1000">
-          the budget planner that works for  <strong class="custom-underline">you</strong>
+          the budget planner that works for <strong class="custom-underline">you</strong>
         </p>
       </div>
 
@@ -104,21 +104,26 @@ https://templatemo.com/tm-567-nomad-force
       <div class="container mb-5 pb-lg-5">
         <div class="row">
           <div class="col-12">
-            <h2 class="mb-3" data-aos="fade-up">Let us create...</h2>
+            <h2 class="mb-3" data-aos="fade-up">What do we offer?
+            </h2>
           </div>
 
           <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-            <p class="me-4" data-aos="fade-up" data-aos-delay="300">You may contribute <a rel="nofollow"
-                href="http://paypal.me/templatemo" target="_blank">a small amount</a> via PayPal if <a rel="nofollow"
-                href="https://templatemo.com/tm-567-nomad-force" target="_parent">Nomad Force Template</a> is useful for
-              you. This will absolutely help us to keep creating better CSS templates for you. <br><br>We provide you
-              100% free templates on TemplateMo website. Images are provided by FreePik and Unsplash websites.</p>
+            <p class="me-4" data-aos="fade-up" data-aos-delay="300">
+              A budget planner appconsiderate of a user's mental health that prioritizes simplicity, accessibility, and
+              emotional support.
+
+              <br><br>The app allows you to have a clean and easy-to-use interface that allows you to input and track
+              your expenses and income easily.
+            </p>
           </div>
 
           <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
-            <p data-aos="fade-up" data-aos-delay="500">This Bootstrap 5 layout is free to use for your business. You are
-              allowed to edit it in any way you like. However, please do not redistribute this template ZIP file for a
-              template download purpose on any other website such as Free CSS collections.</p>
+            <p data-aos="fade-up" data-aos-delay="500">To ensure the consideration of a user's mental health, we take
+              into account the impact of financial stress on mental health.
+              We provide personalized support based on the user's goals, values, and triggers. <br><br>
+              By addressing the psychological and emotional aspects of financial management, we hope to help users
+              reduce stress and anxiety related to money</p>
           </div>
 
         </div>
@@ -127,14 +132,14 @@ https://templatemo.com/tm-567-nomad-force
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-3 col-12 p-0">
-            <img src="images/elena-rabkina-eVVzwsNhNf4-unsplash.jpg" class="img-fluid about-image" alt="">
+            <img src="images/blobs1.png" class="img-fluid about-image" alt="">
           </div>
 
-          <div class="col-lg-3 col-12 bg-dark">
+          <div class="col-lg-3 col-12 " style="background-color: aliceblue;">
             <div class="d-flex flex-column flex-wrap justify-content-center h-100 py-5 px-4 pt-lg-4 pb-lg-0">
-              <h3 class="text-white mb-3" data-aos="fade-up">We’re - idealists and strategic thinkers.</h3>
+              <h3 class="text-black mb-3" data-aos="fade-up">We’re - idealists and strategic thinkers.</h3>
 
-              <p class="text-secondary-white-color" data-aos="fade-up">Over six years in the video business</p>
+              <p class="text-black-50" data-aos="fade-up">Over six years in the video business</p>
 
               <div class="mt-3 custom-links">
 
@@ -152,48 +157,43 @@ https://templatemo.com/tm-567-nomad-force
             <section id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img
-                    src="images/people/studio-shot-beautiful-happy-retired-caucasian-female-with-pixie-hairdo-crossing-arms-her-chest-having-confident-look-smiling-broadly.jpg"
-                    class="img-fluid team-image" alt="">
+                  <img src="images/financial-planning.jpg" class="img-fluid team-image" alt="">
 
-                  <div class="team-thumb bg-warning">
-                    <h3 class="text-white mb-0">Susane R.</h3>
+                  <div class="team-thumb" style="background-color: #FFACAC;">
+                    <h3 class="text-black mb-0">Financial Planning</h3>
 
-                    <p class="text-secondary-white-color mb-0">Founding Partner</p>
+                    <p class="text-black-50 mb-0">Visualise your finances</p>
                   </div>
                 </div>
 
                 <div class="carousel-item">
-                  <img
-                    src="images/people/project-leder-with-disabilities-looking-front-sitting-immobilized-wheelchair-business-office-room.jpg"
-                    class="img-fluid team-image" alt="">
+                  <img src="images/financial-relief.jpg" class="img-fluid team-image" alt="">
 
-                  <div class="team-thumb bg-primary">
-                    <h3 class="text-white mb-0">Morgan S.</h3>
+                  <div class="team-thumb " style="background-color: #FBFFB1;">
+                    <h3 class="text-black mb-0">Financial Relief</h3>
 
-                    <p class="text-secondary-white-color mb-0">CEO & Investor</p>
+                    <p class="text-black-50 mb-0">CEO & Investor</p>
                   </div>
                 </div>
 
                 <div class="carousel-item">
-                  <img
-                    src="images/people/asia-business-woman-feeling-happy-smiling-looking-camera-while-relax-home-office.jpg"
-                    class="img-fluid team-image" alt="">
+                  <img src="images/therapy.jpg" class="img-fluid team-image" alt="">
 
-                  <div class="team-thumb bg-success">
-                    <h3 class="text-white mb-0">Naomi W.</h3>
+                  <div class="team-thumb" style="background-color: #98DFD6;">
+                    <h3 class="text-black mb-0">Personalised</h3>
 
-                    <p class="text-secondary-white-color mb-0">Art Director</p>
+                    <p class="text-black-50 mb-0">Feature rich</p>
                   </div>
                 </div>
-
-                <div class="carousel-item">
+                <!--
+  <div class="carousel-item">
                   <img
                     src="images/people/happy-african-american-professional-manager-smiling-looking-camera-headshot-portrait.jpg"
                     class="img-fluid team-image" alt="">
 
-                  <div class="team-thumb bg-info">
+                  <div class="team-thumb bg-info" style="background-color:#FBFFB1; color: #FBFFB1;">
                     <h3 class="text-white mb-0">Robinson H.</h3>
+
 
                     <p class="text-secondary-white-color mb-0">Sales & Marketing</p>
                   </div>
@@ -209,18 +209,19 @@ https://templatemo.com/tm-567-nomad-force
                   </div>
                 </div>
               </div>
+-->
 
-              <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 
-                <span class="visually-hidden">Previous</span>
-              </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
 
-              <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 
-                <span class="visually-hidden">Next</span>
-              </button>
+                  <span class="visually-hidden">Next</span>
+                </button>
             </section>
 
           </div>
@@ -228,7 +229,8 @@ https://templatemo.com/tm-567-nomad-force
       </div>
     </section>
 
-    <section class="section-padding" id="portfolio">
+    <!--
+      <section class="section-padding" id="portfolio">
       <div class="container">
         <div class="row">
 
@@ -294,8 +296,11 @@ https://templatemo.com/tm-567-nomad-force
         </div>
       </div>
     </section>
+    -->
 
-    <section class="news section-padding" id="news">
+
+    <!--
+      <section class="news section-padding" id="news">
       <div class="container">
         <div class="row">
 
@@ -378,6 +383,8 @@ https://templatemo.com/tm-567-nomad-force
         </div>
       </div>
     </section>
+    -->
+
 
     <section class=" contact section-padding" id="contact">
       <div class="container">
@@ -451,15 +458,31 @@ https://templatemo.com/tm-567-nomad-force
       </div>
     </section>
 
-    <section class="google-map">
+    <section class="contact section-padding" id="contact" style="background-color:#FFACAC;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="section-title">Join us</h2>
+            <button onclick="location.href='./register.php'" class="btn btn-primary btn-lg" style="background-color: #FBFFB1; color: black; border-radius: 10px; border-color: #FBFFB1;" >Register</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+
+    
+
+  </main>
+  <!--
+    <section class="google-map" style="background-color:azure; height: 100px;">
       <iframe
         src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
         class="map-iframe" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="text-center">
+        Join us
+      </div>
     </section>
-
-  </main>
-
-  <footer class="site-footer">
+    <footer class="site-footer">
     <div class="container">
       <div class="row">
 
@@ -482,23 +505,12 @@ https://templatemo.com/tm-567-nomad-force
 
         </div>
 
-        <div class="col-lg-3 col-5 ms-auto">
-          <ul class="social-icon">
-            <li><a href="#" class="social-icon-link bi-facebook"></a></li>
-
-            <li><a href="#" class="social-icon-link bi-twitter"></a></li>
-
-            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-
-            <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-
-            <li><a href="#" class="social-icon-link bi-youtube"></a></li>
-          </ul>
-        </div>
 
       </div>
       </section>
   </footer>
+  -->
+
 
   <!-- JAVASCRIPT FILES -->
   <script src="js/jquery.min.js"></script>
