--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://templatemo.com/tm-567-nomad-force
 
           <div class="col-lg-3 col-12 " style="background-color: aliceblue;">
             <div class="d-flex flex-column flex-wrap justify-content-center h-100 py-5 px-4 pt-lg-4 pb-lg-0">
-              <h3 class="text-black mb-3" data-aos="fade-up">We’re - idealists and strategic thinkers.</h3>
+              <h3 class="text-black mb-3" data-aos="fade-up">.</h3>
 
               <p class="text-black-50" data-aos="fade-up">Over six years in the video business</p>
 
