--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link href="css/aos.css" rel="stylesheet">
 
   <link href="css/templatemo-nomad-force.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./images/app-logo.png">
   <!--
 
 TemplateMo 567 Nomad Force
