--- a/index.html
+++ b/index.html
@@ -138,17 +138,12 @@ https://templatemo.com/tm-567-nomad-force
 
           <div class="col-lg-3 col-12 " style="background-color: aliceblue;">
             <div class="d-flex flex-column flex-wrap justify-content-center h-100 py-5 px-4 pt-lg-4 pb-lg-0">
-              <h3 class="text-black mb-3" data-aos="fade-up">.</h3>
+              <h3 class="text-black mb-3" data-aos="fade-up">From financial to mental bliss</h3>
 
-              <p class="text-black-50" data-aos="fade-up">Over six years in the video business</p>
+              <p class="text-black-50" data-aos="fade-up">We've got your back, regardless</p>
 
               <div class="mt-3 custom-links">
 
-                <a href="#news" class="text-white custom-link" data-aos="zoom-in" data-aos-delay="100">Read News &
-                  Events</a>
-
-                <a href="#contact" class="text-white custom-link" data-aos="zoom-in" data-aos-delay="300">Work with
-                  Us</a>
               </div>
 
             </div>
@@ -391,70 +386,18 @@ https://templatemo.com/tm-567-nomad-force
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-7 col-12 mx-auto">
+          <div class="col-md-12 col-12 " style="background-image: url('./images/bg1.png');background-size: 100%;background-repeat:no-repeat; height:auto;width: 100%; ">
+            <div class="d-flex flex-column flex-wrap justify-content-center h-100 py-5 px-4 pt-lg-4 pb-lg-0">
+              <h3 class="text-black mb-3" data-aos="fade-up">From financial to mental bliss</h3>
 
-            <h2 class="mb-4 text-center" data-aos="fade-up">Dont' be shy, write to us</h2>
+              <p class="text-black-50" data-aos="fade-up">We've got your back, regardless</p>
 
-            <form action="#" method="post" class="contact-form" role="form" data-aos="fade-up">
+              <div class="mt-3 custom-links">
 
-              <div class="row">
-
-                <div class="col-lg-6 col-6">
-                  <label for="name" class="form-label">Name <sup class="text-danger">*</sup></label>
-
-                  <input type="text" name="name" id="name" class="form-control" placeholder="Full name" required>
-                </div>
-
-                <div class="col-lg-6 col-6">
-                  <label for="email" class="form-label">Email <sup class="text-danger">*</sup></label>
-
-                  <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control"
-                    placeholder="Email address" required>
-                </div>
-
-                <div class="col-12 my-4">
-                  <label for="message" class="form-label">How can we help?</label>
-
-                  <textarea name="message" rows="6" class="form-control" id="message"
-                    placeholder="Tell us about the project" required></textarea>
-
-                </div>
-
-                <div class="col-12">
-                  <label for="services" class="form-label">Services<sup class="text-danger">*</sup></label>
-                </div>
-
-                <div class="col-lg-4 col-12">
-                  <div class="form-check">
-                    <input type="checkbox" id="checkbox1" name="checkbox1" class="form-check-input">
-
-                    <label class="form-check-label" for="checkbox1">Branding</label>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-12 my-2 my-lg-0">
-                  <div class="form-check">
-                    <input type="checkbox" id="checkbox2" name="checkbox2" class="form-check-input">
-
-                    <label class="form-check-label" for="checkbox2">Digital Experiences</label>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-12">
-                  <div class="form-check">
-                    <input type="checkbox" id="checkbox3" name="checkbox3" class="form-check-input">
-
-                    <label class="form-check-label" for="checkbox3">Web Development</label>
-                  </div>
-                </div>
               </div>
 
-              <div class="col-lg-5 col-12 mx-auto mt-5">
-                <button type="submit" class="form-control">Send Message</button>
-              </div>
-            </form>
+            </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -464,14 +407,15 @@ https://templatemo.com/tm-567-nomad-force
         <div class="row">
           <div class="col-md-12 text-center">
             <h2 class="section-title">Join us</h2>
-            <button onclick="location.href='./register.php'" class="btn btn-primary btn-lg" style="background-color: #FBFFB1; color: black; border-radius: 10px; border-color: #FBFFB1;" >Register</button>
+            <button onclick="location.href='./register.php'" class="btn btn-primary btn-lg"
+              style="background-color: #FBFFB1; color: black; border-radius: 10px; border-color: #FBFFB1;">Register</button>
           </div>
         </div>
       </div>
     </section>
-    
 
-    
+
+
 
   </main>
   <!--
